Therion 6.3.2 (in progress):


--------------------------------------------------------------------------------

Therion 6.3.1 (2024-11-22):

xtherion:
 * revert the change introduced in 6.3.0 to allow spaces in the thconfig
   filename [#590] to fix file opening issues on Windows

--------------------------------------------------------------------------------

Therion 6.3.0 (2024-11-20):

therion:
 * REMOVED proj-auto initialization file option;
   remove it from your ini files if you use it
 * support for Geospatial PDF maps added (custom georeferencing used in versions
   5.3-6.2.1 is not included in PDF maps any more)
 * new layout option: geospatial on/off
 * projection (*.prj) files associated with shapefiles are generated by Proj
   for all output projections;
   it's not possible to specify them in thcsdata.tcl any more
 * use precise grid transformation for built-in OSGB:XY coordinate systems
 * import splays from 3d files [#599]
 * new 'require <version>' command [#598]
 * thbook updates
 * REMOVED Proj v4 and v5 compatibility; minimum supported Proj version is 6.3.1
 * updated Survex img library [#567]
 * old MetaPost output to PDF conversion functions removed from sources
   (they were unused since 6.0.0 release)
 * bug fixes:
   - fix symbol-hide special (scale-bar|north-arrow) in XHTML output [#558]
   - fix order of layout copy commands [#563]
   - don't reset symbol-hide with symbol-set [#561]
   - improve th2 export [#573, #588]
   - import .3d shots with their correct survey name [#585]
   - KML entrance label: comment or name [#574]
   - fix import filter: exclude filtered stations [#583]
   - fix NaN coordinates if Z is undefined in Proj 9.2.0+
   - fix thcsdata.cxx generation
   - fix PROJ_LIB path handling
   - use linux line-ends in text outputs (TXT, SVG, HTML, XHTML, KML, SQL, CSV,
     XVI, TH2, PLT, VRML, 3DMF, BBOX) to ensure cross-platform uniformity
   - various smaller fixes [#559, #586]